# Open-Router

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
app/builders/: __init__.py  base_builder.py  chat_builder.py  content_builder.py
app/decorators/: __init__.py  cache_decorator.py  log_decorator.py  monitor_decorator.py  retry_decorator.py  timeout_decorator.py
app/enums/: __init__.py  aspect_ratios.py  audio_formats.py  cache_ttl.py  cache_types.py  content_types.py  data_collection.py  file_types.py  finish_reasons.py  image_formats.py  image_sizes.py  message_roles.py  modalities.py  model_variants.py  pdf_engines.py  plugin_types.py  provider_sort.py  quantization.py  reasoning_effort.py  response_format.py  tool_types.py  transforms.py  video_formats.py
app/exceptions/: __init__.py  client_exceptions.py  openrouter_exceptions.py  validation_exceptions.py
app/factories/: __init__.py
app/models/: __init__.py  base.py  openrouter.py
app/monitoring/: __init__.py  health.py  metrics.py  tracing.py
app/processors/: __init__.py  annotation_processor.py  base_processor.py  content_extractor.py  reasoning_extractor.py  response_processor.py  stream_processor.py  tool_call_processor.py  usage_analyzer.py
app/routers/: __init__.py  chat.py  health.py  models.py  multimodal.py  translation.py
app/services/: __init__.py  openrouter_client.py  template_service.py
app/strategies/: __init__.py  fallback_strategy.py  provider_strategy.py  retry_strategy.py  routing_strategy.py
app/templates/: __init__.py  base.py  (+5 more)
docs/: README.md
tests/: conftest.py
(+103 files in other folders)
